Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26534

clangd: Crash when holding Ctrl-W (Closing editors)

XMLWordPrintable

    • 5b307634c3 (qt-creator/qt-creator/7.0) 5b307634c3 (qt-creator/qt-creator/master) 5b307634c3 (qt-creator/tqtc-qt-creator/7.0) 5b307634c3 (qt-creator/tqtc-qt-creator/master) 5b307634c3 (qt-creator/tqtc-qt-creator/qds-3.1)

      • Enable clangd
      • Open many C++ editors
      • Press and hold Ctrl-W

      It doesn't always reproduce.

      cc kandeler

      1 UnhandledExceptionFilter                                             KERNELBASE            0x7ffd4692c247 
      2 memset                                                               ntdll                 0x7ffd46e35270 
      3 _C_specific_handler                                                  ntdll                 0x7ffd46e1c776 
      4 _chkstk                                                              ntdll                 0x7ffd46e3217f 
      5 RtlRaiseException                                                    ntdll                 0x7ffd46de1454 
      6 KiUserExceptionDispatcher                                            ntdll                 0x7ffd46e30cae 
      7 LanguageClient::Client::resetAssistProviders                         client.cpp       1218 0x7ffcd78d5795 
      8 LanguageClient::Client::~Client                                      client.cpp       135  0x7ffcd78a31ab 
      9 ClangCodeModel::Internal::ClangdClient::`scalar deleting destructor' ClangCodeModel        0x7ffcd6632844 
      10 QObject::event                                                       Qt6Core               0x7ffce3faa263 
      11 QApplicationPrivate::notify_helper                                   Qt6Widgets            0x7ffce6f621fe 
      12 QApplication::notify                                                 Qt6Widgets            0x7ffce6f612fb 
      13 QCoreApplication::notifyInternal2                                    Qt6Core               0x7ffce3f6a395 
      14 QCoreApplicationPrivate::sendPostedEvents                            Qt6Core               0x7ffce3f6c737 
      15 QWindowsGuiEventDispatcher::sendPostedEvents                         Qt6Gui                0x7ffce4e4624f 
      16 QEventDispatcherWin32::processEvents                                 Qt6Core               0x7ffce40b8bd2 
      17 QWindowsGuiEventDispatcher::processEvents                            Qt6Gui                0x7ffce4e46229 
      18 QEventLoop::exec                                                     Qt6Core               0x7ffce3f6f03f 
      19 QCoreApplication::exec                                               Qt6Core               0x7ffce3f6845c 
      20 main                                                                 main.cpp         771  0x7ff733068e0a 
      21 WinMain                                                              qtcreator             0x7ff73306fee7 
      22 __scrt_common_main_seh                                               exe_common.inl   288  0x7ff73306ec3a 
      23 BaseThreadInitThunk                                                  KERNEL32              0x7ffd46b07034 
      24 RtlUserThreadStart                                                   ntdll                 0x7ffd46de2651 

        For Gerrit Dashboard: QTCREATORBUG-26534
        # Subject Branch Project Status CR V

            davschul David Schulz
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes